--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
 </head>
 <body>
 <header>
-    <nav>
-
+    <nav class="navigation">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </nav>
-    <div>
+    <div class="header">
+        <div class="news"></div>
+        <div class="subjects">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
 
     </div>
 
@@ -21,22 +37,48 @@
 </header>
 <main>
     <div>
-        <div>
-            <div>
+        <div class="content">
+            <div class="leftContent">
                 <article>
                     <header>
 
                     </header>
-                    <div></div>
-                    <ul>
+                    <div class="contentText">
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <ul class="contentList">
                         <li></li>
                         <li></li>
                         <li></li>
                     </ul>
-                    <div></div>
+                    <div class="contentText">
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </div>
                 </article>
+                <div class="more">
+                    <div class="related">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="topicMore">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+
+                </div>
             </div>
-            <div>
+            <div class="rightContent">
                 <aside></aside>
                 <aside></aside>
                 <aside></aside>
@@ -46,12 +88,12 @@
 
 </main>
 <footer>
-    <nav>
+    <nav class="footerNavigation">
         <div>
 
         </div>
     </nav>
-    <div>
+    <div class="legals">
         <div>
 
         </div>
