--- a/index.html
+++ b/index.html
@@ -12,22 +12,27 @@
 <header>
     <nav class="navigation">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="#"><img src="" alt="logo"></a></li>
+            <li><a href="#"><img src="" alt="signIn">Sign In</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Sports</a></li>
+            <li><a href="#">Future</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Search</a></li>
         </ul>
     </nav>
     <div class="header">
-        <div class="news"></div>
-        <div class="subjects">
+        <div class="news">
+            <a href=""><img src="" alt=""></a>
+        </div>
+        <div class="hotTopics">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">US Election</a></li>
+                <li><a href="#">Console release 2020</a></li>
+                <li><a href="#">Apple Keynote</a></li>
+                <li><a href="#"></a></li>
             </ul>
         </div>
 
@@ -36,7 +41,7 @@
 
 </header>
 <main>
-    <div>
+    <div class="main">
         <div class="content">
             <div class="leftContent">
                 <article>
