--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="#"><img src="" alt="logo"></a></li>
-            <li><a href="#"><img src="" alt="signIn">Sign In</a></li>
+            <li><a href="#"><img src="" alt="">Sign In</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Sports</a></li>
@@ -46,47 +46,92 @@
             <div class="leftContent">
                 <article>
                     <header>
-
+                        <h1>PewDiePie to take break from YouTube as 'feeling very tired'</h1>
                     </header>
+                    <div class="contentImg">
+                        <img src="" alt="">
+                    </div>
                     <div class="contentText">
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p><span>YouTube star PewDiePie has announced he is taking a break from the platform, saying he is "feeling very tired".</span></p>
+                        <p>The 30-year-old Swedish star, real name Felix Kjellberg, found fame with video game commentaries and was at one point the world's highest earning YouTuber.</p>
+                        <p>But he was more recently involved in controversies around accusations of racism and anti-Semitism.</p>
+                        <p>"Early next year I'll be away for a little while. I'll explain that later," PewDiePie said in a video post.</p>
+                        <p>Earlier this year, PewDiePie, who currently has 102 million subscribers, was overtaken as the biggest YouTube channel in the world by Bollywood record label T-Series, which now has more than 121 million subscribers.</p>
+                        <p>"I'm taking a break from YouTube next year. I wanted to say it in advance because I made up my mind. I'm tired. I'm feeling very tired. I don't know if you can tell," PewDiePie said, laughing.</p>
                     </div>
                     <ul class="contentList">
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><span>The battle to be king of YouTube</span></li>
+                        <li><span>No, PewDiePie is not banned in China</span></li>
+                        <li><span>PewDiePie cancels $50k anti-hate group donation</span></li>
                     </ul>
                     <div class="contentText">
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p>Disney <span>cut ties</span> with him in 2017 after some videos he released were found to contain Nazi references or anti-Semitic imagery. He accepted the material was offensive, but said he did not support "any kind of hateful attitudes".</p>
+                        <p>PewDiePie had been linked to Disney through Maker Studios, a company with a network of YouTube stars.</p>
+                        <p>Later that year, he <span>apologised for using the N-word</span> during a live stream. And last year, he <span>apologised again</span> for reposting a meme which appeared to mock Demi Lovato's hospital treatment for a suspected drug overdose.</p>
                     </div>
                 </article>
                 <div class="more">
                     <div class="related">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <h2>Related topics</h2>
+                        <div>Youtubers</div>
+                        <div>Youtube</div>
+                        <div>Gaming</div>
+                        <div>PewDiePie</div>
                     </div>
                     <div class="topicMore">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <h2>More on this story</h2>
+                        <div>PewDiePie and Marzia Bisognin marry at Kew Gardens
+                            <br>
+                            Published
+                            21 August 2019</div>
+                        <div>PewDiePie v T-Series: The battle to be king of YouTube
+                            <br>
+                            Published
+                            20 December 2018
+
+                        </div>
                     </div>
 
                 </div>
             </div>
             <div class="rightContent">
-                <aside></aside>
-                <aside></aside>
-                <aside></aside>
+                <aside>
+                    <h3>Top Stories</h3>
+                    <div>French police raid homes of suspected Islamists
+                        <br>
+                        Published
+
+                        6 minutes ago</div>
+                    <div>How to save money working from home this winter
+                        <br>
+                        Published
+
+                        53 minutes ago</div>
+                    <div>How to save money working from home this winter
+                        <br>
+                        Published
+
+                        53 minutes ago</div>
+                </aside>
+                <aside>
+                    <h3>Features</h3>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                    <div class="fakeimg"></div>
+                </aside>
+                <aside>
+                    <h3>Related</h3>
+                    <div class="fakeArticle"></div>
+                    <div class="fakeArticle"></div>
+                    <div class="fakeArticle"></div>
+                    <div class="fakeArticle"></div>
+                    <div class="fakeArticle"></div>
+                </aside>
             </div>
         </div>
     </div>
@@ -95,12 +140,33 @@
 <footer>
     <nav class="footerNavigation">
         <div>
-
+            <ul>
+                <li><a href="#"><img src="" alt="logo"></a></li>
+                <li><a href="#"><img src="" alt="signIn">Sign In</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Sports</a></li>
+                <li><a href="#">Future</a></li>
+                <li><a href="#">Travel</a></li>
+                <li><a href="#">Search</a></li>
+            </ul>
         </div>
     </nav>
     <div class="legals">
         <div>
+            Terms of Use <br>
+            About the BBC <br>
+            Privacy Policy <br>
+            Cookies <br>
+            Accessibility Help <br>
+            Parental Guidance <br>
+            Contact the BBC <br>
+            Get Personalised Newsletters <br>
+            Why you can trust the BBC <br>
+            Advertise with us <br>
+            AdChoices / Do Not Sell My Info <br>
 
+            © 2020 BBC. The BBC is not responsible for the content of external sites. Read about our approach to external linking.
         </div>
     </div>
 </footer>
