--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#">US Election</a></li>
                 <li><a href="#">Console release 2020</a></li>
                 <li><a href="#">Apple Keynote</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Internet</a></li>
             </ul>
         </div>
 
@@ -60,14 +60,14 @@
                         <p>"I'm taking a break from YouTube next year. I wanted to say it in advance because I made up my mind. I'm tired. I'm feeling very tired. I don't know if you can tell," PewDiePie said, laughing.</p>
                     </div>
                     <ul class="contentList">
-                        <li><span>The battle to be king of YouTube</span></li>
-                        <li><span>No, PewDiePie is not banned in China</span></li>
-                        <li><span>PewDiePie cancels $50k anti-hate group donation</span></li>
+                        <li><a>The battle to be king of YouTube</a></li>
+                        <li><a>No, PewDiePie is not banned in China</a></li>
+                        <li><a>PewDiePie cancels $50k anti-hate group donation</a></li>
                     </ul>
                     <div class="contentText">
-                        <p>Disney <span>cut ties</span> with him in 2017 after some videos he released were found to contain Nazi references or anti-Semitic imagery. He accepted the material was offensive, but said he did not support "any kind of hateful attitudes".</p>
+                        <p>Disney <a>cut ties</a> with him in 2017 after some videos he released were found to contain Nazi references or anti-Semitic imagery. He accepted the material was offensive, but said he did not support "any kind of hateful attitudes".</p>
                         <p>PewDiePie had been linked to Disney through Maker Studios, a company with a network of YouTube stars.</p>
-                        <p>Later that year, he <span>apologised for using the N-word</span> during a live stream. And last year, he <span>apologised again</span> for reposting a meme which appeared to mock Demi Lovato's hospital treatment for a suspected drug overdose.</p>
+                        <p>Later that year, he <a>apologised for using the N-word</a> during a live stream. And last year, he <a>apologised again</a> for reposting a meme which appeared to mock Demi Lovato's hospital treatment for a suspected drug overdose.</p>
                     </div>
                 </article>
                 <div class="more">
