--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
                 <div class="more">
                     <div class="related">
                         <h2>Related topics</h2>
-                        <div>Youtubers</div>
-                        <div>Youtube</div>
-                        <div>Gaming</div>
-                        <div>PewDiePie</div>
+                        <div class="buttons">
+                            <div>Youtubers</div>
+                            <div>Youtube</div>
+                            <div>Gaming</div>
+                            <div>PewDiePie</div>
+                        </div>
                     </div>
                     <div class="topicMore">
                         <h2>More on this story</h2>
@@ -98,20 +100,11 @@
                 <aside>
                     <h3>Top Stories</h3>
                     <div>French police raid homes of suspected Islamists
-                        <br>
-                        Published
-
-                        6 minutes ago</div>
+                        </div>
                     <div>How to save money working from home this winter
-                        <br>
-                        Published
-
-                        53 minutes ago</div>
+                        </div>
                     <div>How to save money working from home this winter
-                        <br>
-                        Published
-
-                        53 minutes ago</div>
+                        </div>
                 </aside>
                 <aside>
                     <h3>Features</h3>
@@ -126,11 +119,11 @@
                 </aside>
                 <aside>
                     <h3>Related</h3>
-                    <div class="fakeArticle"></div>
-                    <div class="fakeArticle"></div>
-                    <div class="fakeArticle"></div>
-                    <div class="fakeArticle"></div>
-                    <div class="fakeArticle"></div>
+                    <div class="fakeArticle">Related article title</div>
+                    <div class="fakeArticle">Related article title</div>
+                    <div class="fakeArticle">Related article title</div>
+                    <div class="fakeArticle">Related article title</div>
+                    <div class="fakeArticle">Related article title</div>
                 </aside>
             </div>
         </div>
@@ -139,18 +132,16 @@
 </main>
 <footer>
     <nav class="footerNavigation">
-        <div>
-            <ul>
-                <li><a href="#"><img src="" alt="logo"></a></li>
-                <li><a href="#"><img src="" alt="signIn">Sign In</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Sports</a></li>
-                <li><a href="#">Future</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Search</a></li>
-            </ul>
-        </div>
+        <ul>
+            <li><a href="#"><img src="" alt="logo"></a></li>
+            <li><a href="#"><img src="" alt="">Sign In</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Sports</a></li>
+            <li><a href="#">Future</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Search</a></li>
+        </ul>
     </nav>
     <div class="legals">
         <div>
